# pomoshchnik-naznacheniya-vstrech

./: .dockerignore  .env.example  .gitignore  1. Техническое задание.md  2. Стек используемых технологий.md  3. Этапы разработки.md  Dockerfile  README.md  alembic.ini  docker-compose.public.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-vps.yml
alembic/: env.py
alembic/versions/: 20260522_01_stage2_initial_schema.py  20260523_01_stage6_google_oauth_storage.py  20260523_02_stage7_notification_deliveries.py
app/: __init__.py  main.py
app/bot/: admin_handlers.py  admin_service.py  dispatcher.py  handlers.py  keyboards.py  states.py  user_flow_service.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  defaults.py  enums.py  models.py  repositories.py  session.py
app/domain/: __init__.py  exceptions.py  lifecycle.py  (+1 more)
docker/: entrypoint.sh
docs/: ci-cd-autodeploy.md  git-branching-dev-main.md  miniapp-dev-main-merge-checklist.md  miniapp-domain-vps.md  miniapp-mvp-acceptance-dev.md  miniapp-mvp-stage-plan.md  miniapp-mvp-tz.md
scripts/: deploy_vps.sh
tests/: test_bot_keyboards.py  test_health.py  test_miniapp_auth.py  test_miniapp_routes.py  test_miniapp_security.py  test_miniapp_sessions.py  test_stage2_migrations.py  test_stage3_lifecycle.py  test_stage3_scheduling.py  test_stage4_user_flow.py  test_stage5_admin_flow.py  test_stage6_google_calendar.py  test_stage7_background_jobs.py  test_stage8_security_privacy.py  test_stage9_monitoring.py
Архив/: Этапы разработки v2.md  Этапы разработки старая версия.md
(+14 files in other folders)
