[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-calendar-bot"
version = "0.1.0"
description = "Telegram bot MVP for meeting coordination with Google Calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0,<4.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "sqlalchemy>=2.0.42,<3.0.0",
    "alembic>=1.16.5,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "redis>=6.4.0,<7.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-json-logger>=3.3.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "ruff>=0.12.7,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
